--- a/hotspring_details.html
+++ b/hotspring_details.html
@@ -14,7 +14,7 @@
         <div class="logo"></div>
         <div class="title">
             <h1>Welcome to </h1>
-            <p>Yellowstone National Park</p>
+            <h1>Yellowstone National Park</h1>
         </div>
     </header>
     <main>
@@ -38,9 +38,6 @@
             </a>
             <a href="#" class="ticket">
                 <p>Ticket</p>
-            </a>
-            <a href="submission.html" class="share">
-                <p>share</p>
             </a>
         </div>
         <div class="container">
@@ -67,6 +64,9 @@
                     geyser
                     and through the Upper Geyser Basin."                     
                 </p>
+                <a href="submission.html">
+                    Share
+                </a>
             </div>
         </div>
     </main>
@@ -82,7 +82,7 @@
         </a>
     </nav>
     <footer>
-        <p>All above content is from free resources.</p>
+        <h2>All above content is from free resources.</h2>
     </footer>
 </body>
 
