--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="logo"></div>
         <div class="title">
             <h1>Welcome to </h1>
-            <p>Yellowstone National Park</p>
+            <h1>Yellowstone National Park</h1>
         </div>
     </header>
     <main>
@@ -51,7 +51,7 @@
 
     </main>
     <footer>
-        <p>All above content is from free resources.</p>
+        <h2>All above content is from free resources.</h2>
     </footer>
 </body>
 
