--- a/submission.html
+++ b/submission.html
@@ -41,6 +41,7 @@
             </a>
         </div>
         <div class="container">
+            <div class="filler"></div>
             <form method="/" action="confirmation.html">
                 <fieldset>
                     <legend>Sign up for our mailing list!</legend>
