--- a/confirmation.html
+++ b/confirmation.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="logo"></div>
-        <div class="title">
+        <div class="title color_changing">
             <h1>Welcome to </h1>
             <h1>Yellowstone National Park</h1>
         </div>
@@ -22,7 +22,7 @@
             <a href="index.html" class="homepage">
                 <p>Homepage</p>
             </a>
-            <a href="list_of_attractions.html" class="attractions">Hot Attrations</a>
+            <a href="list_of_attractions.html" class="attractions">Attrations</a>
             <a href="https://www.google.com/maps/place/%E9%BB%83%E7%9F%B3%E5%9C%8B%E5%AE%B6%E5%85%AC%E5%9C%92/@44.5857951,-110.5140571,8z/data=!3m1!4b1!4m5!3m4!1s0x5351e55555555555:0xaca8f930348fe1bb!8m2!3d44.427963!4d-110.588455"
                 class="map">
                 <p>Google Map</p>
