--- a/hotspring_details.html
+++ b/hotspring_details.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="logo"></div>
-        <div class="title">
+        <div class="title color_changing">
             <h1>Welcome to </h1>
             <h1>Yellowstone National Park</h1>
         </div>
@@ -22,7 +22,7 @@
             <a href="index.html" class="homepage">
                 <p>Homepage</p>
             </a>
-            <a href="list_of_attractions.html" class="attractions">Hot Attrations</a>
+            <a href="list_of_attractions.html" class="attractions">Attrations</a>
             <a href="https://www.google.com/maps/place/%E9%BB%83%E7%9F%B3%E5%9C%8B%E5%AE%B6%E5%85%AC%E5%9C%92/@44.5857951,-110.5140571,8z/data=!3m1!4b1!4m5!3m4!1s0x5351e55555555555:0xaca8f930348fe1bb!8m2!3d44.427963!4d-110.588455"
                 class="map">
                 <p>Google Map</p>
@@ -44,25 +44,19 @@
             <h1>Old Faithful Geyser</h1>
             <div class="details">
                 <img src="./img/Geyser.png" alt="Old Faithful Geyser">
-                <p>"Watching Old Faithful Geyser erupt is a Yellowstone National Park tradition. People from all over
-                    the
-                    world have journeyed here to watch this famous geyser. The park’s wildlife and scenery might be as
-                    well-known today, but it was the unique thermal features like Old Faithful Geyser that inspired the
-                    establishment of Yellowstone as the world’s first national park in 1872.
-                    Old Faithful is one of nearly 500 geysers in Yellowstone and one of six that park rangers currently
-                    predict. It is uncommon to be able to predict geyser eruptions with regularity and Old Faithful has
-                    lived up to its name, only lengthening the time between eruptions by about 30 minutes in the last 30
-                    years.
-                    Thermal features change constantly and it is possible Old Faithful may stop erupting someday.
-                    Geysers
-                    and other thermal features are evidence of ongoing volcanic activity beneath the surface and change
-                    is
-                    part of this natural system. Yellowstone preserves the natural geologic processes so that visitors
-                    may
-                    continue to enjoy this natural system.
-                    Watch eruptions from the Old Faithful viewing area or along the boardwalks that weave around the
-                    geyser
-                    and through the Upper Geyser Basin."                     
+                <p>Yellowstone is one of the largest active volcanoes in the world, has never erupted in human history,
+                    and if it were to erupt, could flood the entire United States. Imagine a scene from the movie
+                    "2012." The volcano erupts during an earthquake, causing a landslide, a tsunami and an "apocalypse."
+
+                    This magical place attracts countless tourists who are fascinated by it, and that's why lots of
+                    travlors came to the West. Yellowstone is the largest national park in the country, the first
+                    national park in the world, and a UN World Heritage Site, among the most protected wildlife in the
+                    United States. The park has hot springs, geysers, rivers, lakes, waterfalls, canyons, Old Faithful
+                    Geyser, Grand Prismatic Hot Springs and Mammoth Hot Springs, all natural wonders.
+
+                    The upper half of the park is mountainous and majestic, with the Grand Canyon of Yellowstone as the
+                    main attraction, while the lower half is dominated by hot springs and is more beautiful with its
+                    geysers, hot geysers, air jets and mud bubbling springs.
                 </p>
                 <a href="submission.html">
                     Share
