--- a/list_of_attractions.html
+++ b/list_of_attractions.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="logo"></div>
-        <div class="title">
+        <div class="title color_changing">
             <h1>Welcome to </h1>
             <h1>Yellowstone National Park</h1>
         </div>
